<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/credits_background"
        android:theme="?attr/menuSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/settings"
        android:theme="?attr/header"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:text="@string/musicVol"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <SeekBar
        android:id="@+id/musicSlider"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageButton
        android:id="@+id/musicMute"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/musicSlider"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/speaker" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/soundVol"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/musicSlider" />

    <SeekBar
        android:id="@+id/soundsSlider"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/soundsMute"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/musicSlider"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/speaker" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/theme"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/soundsSlider" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="DARK"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/darkThemeBorder"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:text="LIGHT"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lightThemeBorder"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <View
        android:id="@+id/darkThemeBorder"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_cornered_selected"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/darkTheme"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/darkThemeBorder"
        app:layout_constraintTop_toTopOf="@+id/darkThemeBorder"
        app:srcCompat="@drawable/dark_theme" />

    <View
        android:id="@+id/lightThemeBorder"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_cornered"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/lightTheme"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/lightThemeBorder"
        app:layout_constraintTop_toTopOf="@+id/lightThemeBorder"
        app:srcCompat="@drawable/light_theme" />

</android.support.constraint.ConstraintLayout>